--- a/shopServer/templates/changePic.html
+++ b/shopServer/templates/changePic.html
@@ -92,7 +92,7 @@
 						
 						for(var i=1;i<picNames.length;i++){
 							newPic = picNames[i]
-							var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/dist/img/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+order+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-pencil"></span><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
+							var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/myfile/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+order+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-pencil"></span><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
 							$(".userTable").append(ele);
 							
 							
