--- a/shopServer/templates/home.html
+++ b/shopServer/templates/home.html
@@ -196,6 +196,11 @@
 				window.location.href = 'http://localhost:8000/activeManage/'
 			})
 
+			// 地面店管理跳转按钮
+			$("#cartsManage").click(function() {
+				window.location.href = 'http://localhost:8000/cartsManage/'
+			})
+
 		})
 	</script>
 
